--- a/app/views/whitefish/index.html.erb
+++ b/app/views/whitefish/index.html.erb
@@ -1,2 +1,122 @@
-<h1>Whitefish#index</h1>
-<p>Find me in app/views/whitefish/index.html.erb</p>
+<div class="container">
+	<div class="row">
+		<div class="col-xs-12 header">
+			<%= link_to image_tag("ham.png", :border => 0, :alt => "Menu"), "#whitefish-menu", :class => 'menu' %>
+
+			<nav id="whitefish-menu">
+			   <ul>
+			      <li><%= link_to "Whitefish, MT", whitefish_path, :class => 'city-title' %></li>
+			      <li><%= link_to "The Experience", whitefish_path, :class => 'city-title' %></li>
+			      <li><%= link_to "Explore Dresses", whitefish_path, :class => 'city-title' %></li>
+			      <li><%= link_to "Contact", whitefish_path, :class => 'city-title' %></li>
+			   </ul>
+			</nav>
+			<%= image_tag("willow_bride_logo.png", :alt => "Willow Bride", :width => "363", :height => "70", :class => "logo") %>
+		</div>
+	</div>
+
+	<div class="row">
+		<div class="col-xs-12">
+			<div class="col-xs-6">
+				<%= image_tag("whitefish_placeholder.png", :alt => "Whitefish, MT", :class => "location-img") %>
+			</div>
+			<div class="col-xs-6 location-info">
+				<h3 class="city-title"><%= @store.name %></h3>
+				<p><%= @store.summary %></p>
+			</div>
+		</div>
+	</div>
+
+	<div class="row">
+		<div class="col-xs-12">
+			<div class="col-xs-12">
+				<div class="col-xs-12 appointment-info">
+					<h3>All dresses are shown by appointment</h3>
+					<h3>Book today so we can introduce ourselves</h3>
+					<a href="https://www.schedulicity.com/scheduling/WBV7B4" class="btn">Book an appointment</a>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div class="row">
+		<div class="col-xs-12">
+			<div class="col-xs-6 experience">
+				<%= link_to(whitefish_path) do %>
+					<%= image_tag("whitefish_placeholder.png", :alt => "Whitefish, MT", :class => "location-img") %>
+				<% end %>
+				<div class="label-holder">
+					<h2><%= link_to "The Experience", whitefish_path %>&nbsp;&nbsp;</h2>
+					<%= link_to(whitefish_path, :class => 'arrow-a') do %>
+					  <span class="arrow-circle"><span class="glyphicon glyphicon-menu-right arrow"></span></span>
+					<% end %>
+				</div>
+			</div>
+			<div class="col-xs-6 dresses">
+				<%= link_to(whitefish_path) do %>
+					<%= image_tag("whitefish_placeholder.png", :alt => "Whitefish, MT", :class => "location-img") %>
+				<% end %>
+
+				<div class="label-holder">
+					<h2><%= link_to "Explore Dresses", whitefish_path %></h2>
+					<%= link_to(whitefish_path, :class => 'arrow-a') do %>
+					  <span class="arrow-circle"><span class="glyphicon glyphicon-menu-right arrow"></span></span>
+					<% end %>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div class="row footer">
+		<div class="col-xs-12">
+			<div class="col-xs-12">
+				<div class="col-xs-12 footer-header">
+					<%= image_tag("willow_bride_logo_sm.png", :alt => "Willow Bride", :width => "200", :height => "49", :class => "sm_logo") %>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-xs-4">
+					<h4>Questions?</h4>
+					<a href="mailto:<%= @store.address %>" class="email">Email Us</a>
+				</div>
+				<div class="col-xs-4">
+					<h4>Visit</h4>
+					<p><%= @store.address %></p>
+					<p><%= @store.name %></p>
+					<p><%#= @store.phone %></p>
+
+					<h4>Store Hours</h4>
+					<p>MON &mdash; FRI 9&ndash;5</p>
+					<p>SAT 10&ndash;5</p>
+				</div>
+				<div class="col-xs-4">
+					<h4>Connect</h4>
+					<%= @store.address %>
+				</div>
+			</div>
+		</div>
+	</div>
+
+</div>
+
+<div class="row other-stores">
+	<div class="col-xs-6">
+		<%= link_to "Tupelo, Mississippi", tupelo_path, :class => 'city-title' %>
+		<%= link_to "Get Started", tupelo_path, :class => 'get-started' %>
+	</div>
+	<div class="col-xs-6">
+		<%= link_to "Nashville, Tennessee", nashville_path, :class => 'city-title' %>
+		<%= link_to "Get Started", nashville_path, :class => 'get-started' %>
+	</div>
+</div>
+<div class="row bottom-nav">
+	<div class="col-xs-4">
+		<li><%= link_to "The Experience", whitefish_path, :class => 'city-title' %></li>
+	</div>
+	<div class="col-xs-4">
+      <li><%= link_to "Explore Dresses", whitefish_path, :class => 'city-title' %></li>
+	</div>
+	<div class="col-xs-4">
+    <li><%= link_to "Contact", whitefish_path, :class => 'city-title' %></li>
+	</div>
+</div>
