--- a/app/views/stores/show.html.erb
+++ b/app/views/stores/show.html.erb
@@ -21,6 +21,21 @@
 </p>
 
 <p>
+  <strong>Phone:</strong>
+  <%= @store.phone %>
+</p>
+
+<p>
+  <strong>Email:</strong>
+  <%= @store.email %>
+</p>
+
+<p>
+  <strong>Hours:</strong>
+  <%= @store.hours %>
+</p>
+
+<p>
   <strong>Summary:</strong>
   <%= @store.summary %>
 </p>
