--- a/app/views/whitefish/index.html.erb
+++ b/app/views/whitefish/index.html.erb
@@ -83,7 +83,7 @@
 					<h4>Visit</h4>
 					<p><%= @store.address %></p>
 					<p><%= @store.name %></p>
-					<p><%#= @store.phone %></p>
+					<p><%= @store.phone %></p>
 
 					<h4>Store Hours</h4>
 					<p>MON &mdash; FRI 9&ndash;5</p>
