--- a/app/views/stores/_form.html.erb
+++ b/app/views/stores/_form.html.erb
@@ -28,6 +28,18 @@
     <%= f.text_field :url %>
   </div>
   <div class="field">
+    <%= f.label :phone %><br>
+    <%= f.text_field :phone %>
+  </div>
+  <div class="field">
+    <%= f.label :email %><br>
+    <%= f.text_field :email %>
+  </div>
+  <div class="field">
+    <%= f.label :hours %><br>
+    <%= f.text_field :hours %>
+  </div>
+  <div class="field">
     <%= f.label :summary %><br>
     <%= f.text_area :summary %>
   </div>
