filled out info

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -288,6 +288,14 @@ a.city-title:hover {
 	.footer-header {
 		padding: 2em;
 		border-bottom: 1px solid $grey;
+
+
+	}
+	.hours {
+		max-width: 100px;
+		margin: 0px auto;
+		text-align: center;
+		line-height: 2em;
 	}
 
 	h4 {
