--- a/app/views/whitefish/index.html.erb
+++ b/app/views/whitefish/index.html.erb
@@ -6,9 +6,9 @@
 			<nav id="whitefish-menu">
 			   <ul>
 			      <li><%= link_to "Whitefish, MT", whitefish_path, :class => 'city-title' %></li>
-			      <li><%= link_to "The Experience", whitefish_path, :class => 'city-title' %></li>
-			      <li><%= link_to "Explore Dresses", whitefish_path, :class => 'city-title' %></li>
-			      <li><%= link_to "Contact", whitefish_path, :class => 'city-title' %></li>
+			      <li><%= link_to "The Experience", whitefish_experience_path, :class => 'city-title' %></li>
+			      <li><%= link_to "Explore Dresses", whitefish_explore_path, :class => 'city-title' %></li>
+			      <li><%= link_to "Contact", whitefish_contact_path, :class => 'city-title' %></li>
 			   </ul>
 			</nav>
 			<%= image_tag("willow_bride_logo.png", :alt => "Willow Bride", :width => "363", :height => "70", :class => "logo") %>
@@ -42,24 +42,24 @@
 	<div class="row">
 		<div class="col-xs-12">
 			<div class="col-xs-6 experience">
-				<%= link_to(whitefish_path) do %>
+				<%= link_to(whitefish_experience_path) do %>
 					<%= image_tag("whitefish_placeholder.png", :alt => "Whitefish, MT", :class => "location-img") %>
 				<% end %>
 				<div class="label-holder">
-					<h2><%= link_to "The Experience", whitefish_path %>&nbsp;&nbsp;</h2>
-					<%= link_to(whitefish_path, :class => 'arrow-a') do %>
+					<h2><%= link_to "The Experience", whitefish_experience_path %>&nbsp;&nbsp;</h2>
+					<%= link_to(whitefish_experience_path, :class => 'arrow-a') do %>
 					  <span class="arrow-circle"><span class="glyphicon glyphicon-menu-right arrow"></span></span>
 					<% end %>
 				</div>
 			</div>
 			<div class="col-xs-6 dresses">
-				<%= link_to(whitefish_path) do %>
+				<%= link_to(whitefish_explore_path) do %>
 					<%= image_tag("whitefish_placeholder.png", :alt => "Whitefish, MT", :class => "location-img") %>
 				<% end %>
 
 				<div class="label-holder">
-					<h2><%= link_to "Explore Dresses", whitefish_path %></h2>
-					<%= link_to(whitefish_path, :class => 'arrow-a') do %>
+					<h2><%= link_to "Explore Dresses", whitefish_explore_path %></h2>
+					<%= link_to(whitefish_explore_path, :class => 'arrow-a') do %>
 					  <span class="arrow-circle"><span class="glyphicon glyphicon-menu-right arrow"></span></span>
 					<% end %>
 				</div>
@@ -77,7 +77,7 @@
 			<div class="row">
 				<div class="col-xs-4">
 					<h4>Questions?</h4>
-					<a href="mailto:<%= @store.address %>" class="email">Email Us</a>
+					<a href="mailto:<%= @store.email %>" class="email">Email Us</a>
 				</div>
 				<div class="col-xs-4">
 					<h4>Visit</h4>
@@ -86,12 +86,10 @@
 					<p><%= @store.phone %></p>
 
 					<h4>Store Hours</h4>
-					<p>MON &mdash; FRI 9&ndash;5</p>
-					<p>SAT 10&ndash;5</p>
+					<p class="hours"><%= @store.hours %></p>
 				</div>
 				<div class="col-xs-4">
 					<h4>Connect</h4>
-					<%= @store.address %>
 				</div>
 			</div>
 		</div>
@@ -111,12 +109,12 @@
 </div>
 <div class="row bottom-nav">
 	<div class="col-xs-4">
-		<li><%= link_to "The Experience", whitefish_path, :class => 'city-title' %></li>
+		<li><%= link_to "The Experience", whitefish_experience_path, :class => 'city-title' %></li>
 	</div>
 	<div class="col-xs-4">
-      <li><%= link_to "Explore Dresses", whitefish_path, :class => 'city-title' %></li>
+      <li><%= link_to "Explore Dresses", whitefish_explore_path, :class => 'city-title' %></li>
 	</div>
 	<div class="col-xs-4">
-    <li><%= link_to "Contact", whitefish_path, :class => 'city-title' %></li>
+    <li><%= link_to "Contact", whitefish_contact_path, :class => 'city-title' %></li>
 	</div>
 </div>
