--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,8 @@
 	<script>try{Typekit.load({ async: true });}catch(e){}</script>
 </head>
 <body>
-	<%= yield %>
+	<div class="page-container">
+		<%= yield %>
+	</div>
 </body>
 </html>
