--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,10 +1,14 @@
 <div class="container">
 
-	<%= render partial: "nav" %>
+  <%= render partial: "nav" %>
 
-	<div class="row">
-		<div class="col-xs-12">
-			<%= simple_form_for @contact, :html => {:class => 'form-horizontal' } do |f| %>
+  <div class="row">
+    <div class="col-xs-12">
+       <%# if notice.present? %>
+        <%= render partial: "shared/notice_banner" %>
+      <% #end %>
+      <!--, remote: true-->
+      <%= simple_form_for @contact, :html => {:class => 'form-horizontal' }, remote: true do |f| %>
         <%= f.input :name, :required => true %>
         <%= f.input :email, :required => true %>
         <%= f.input :message, :as => :text, :required => true %>
@@ -16,8 +20,6 @@
           <%= f.button :submit, 'Send message', :class=> "btn btn-primary" %>
         </div>
       <% end %>
-		</div>
-	</div>
+    </div>
+  </div>
 </div>
-
-<%= render partial: "footer" %>
