--- a/app/views/tupelo/contact.html.erb
+++ b/app/views/tupelo/contact.html.erb
@@ -4,7 +4,18 @@
 
 	<div class="row">
 		<div class="col-xs-12">
-			<h1 class="city-title">COMING SOON...</h1>
+			<%= simple_form_for @contact, :html => {:class => 'form-horizontal' } do |f| %>
+        <%= f.input :name, :required => true %>
+        <%= f.input :email, :required => true %>
+        <%= f.input :message, :as => :text, :required => true %>
+        <div class= "hidden">
+          <%= f.input :nickname, :hint => 'Leave this field blank!' %>
+        </div>
+        <div>
+          </br>
+          <%= f.button :submit, 'Send message', :class=> "btn btn-primary" %>
+        </div>
+      <% end %>
 		</div>
 	</div>
 </div>
