--- a/app/views/whitefish/contact.html.erb
+++ b/app/views/whitefish/contact.html.erb
@@ -3,9 +3,22 @@
 	<%= render partial: "nav" %>
 
 	<div class="row">
-		<div class="col-xs-12">
-			<h1 class="city-title">COMING SOON...</h1>
-		</div>
+    <div class="col-xs-12 contact-form">
+      <div id="flash">
+        <%if notice.present? %>
+          <%= render partial: "shared/notice_banner" %>
+        <% end %>
+      </div>
+			<%= bootstrap_form_for Contact.new, layout: :horizontal, label_col: "col-xs-3", control_col: "col-xs-9" do |f| %>
+        <%= f.text_field :name, :required => true, label_class: "label" %>
+        <%= f.text_field :email, :required => true, label_class: "label" %>
+        <%= f.text_area :message, :as => :text, :required => true, label_class: "label" %>
+        <div class= "hidden">
+          <%= f.text_field :nickname, :hint => 'Leave this field blank!' %>
+        </div>
+        <%= f.submit "SEND", :class => 'pull-right btn submit' %>
+      <% end %>
+    </div>
 	</div>
 </div>
 
