little bit of style on the editing pages

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -76,27 +76,7 @@ $lightgrey: #949DA3;
 	padding-right: 30px !important;
 }
 
-.contact-form {
-	margin: 0px auto;
-	text-align: center;
-	max-width: 600px;
-	float: none !important;
 
-	.label {
-	  text-transform: uppercase;
-    display: block;
-    text-align: center;
-    margin: .5em 0;
-    font-family: "brandon-grotesque", sans-serif;
-    letter-spacing: .2em;
-    font-size: 1.25em;
-    color: #565656 !important;
-	}
-
-	.submit {
-		margin-right: 1em;
-	}
-}
 
 .container {
 	width: 99% !important;
@@ -177,6 +157,7 @@ a:hover {
 	display: block;
 	text-align: center;
 	margin: 1em auto .5em;
+	line-height: 1.5em;
 
 	font-family: $h1-font;
 	letter-spacing: .2em;
@@ -192,12 +173,6 @@ a.city-title:hover {
 	display: block;
 	text-align: center;
 	padding-top: .5em;
-}
-
-.menu {
-	position: absolute;
-	top: 0;
-	left: 0;
 }
 
 .menu img {
@@ -247,7 +222,7 @@ a.city-title:hover {
 
 	h3 {
 		font-size: 1.15em;
-		line-height: .75em;
+		line-height: 1.75em;
 		letter-spacing: .2em;
 	}
 
@@ -418,40 +393,94 @@ a.city-title:hover {
 }
 
 .hidden { display: none; }
-/*flash*/
 
-.alert-error {
-background-color: #f2dede;
-border-color: #eed3d7;
-color: #b94a48;
-text-align: left;
+.contact-form {
+	margin: 0px auto;
+	text-align: center;
+	max-width: 600px;
+	float: none !important;
+
+	.label {
+	  text-transform: uppercase;
+    display: block;
+    text-align: center;
+    margin: .5em 0;
+    font-family: "brandon-grotesque", sans-serif;
+    letter-spacing: .2em;
+    font-size: 1.25em;
+    color: #565656 !important;
+	}
+
+	.submit {
+		margin-right: 1em;
+	}
 }
-
-.alert-alert {
-background-color: #f2dede;
-border-color: #eed3d7;
-color: #b94a48;
-text-align: left;
-}
-
-.alert-success {
-background-color: #dff0d8;
-border-color: #d6e9c6;
-color: #468847;
-text-align: left;
-}
-
-.alert-notice {
-background-color: #dff0d8;
-border-color: #d6e9c6;
-color: #468847;
-text-align: left;
-}
-
 
 @media (max-width: 768px) {
-	.experience h2,
-	.dresses h2 {
-		font-size: 1em !important;
+	.row {
+    margin: 2em 0;
+	}
+	.location-info h3 {
+    margin-top: 1.5em;
+	}
+	.experience,
+	.dresses {
+		h2 {
+			font-size: .95em !important;
+		}
+	}
+}
+
+@media (max-width: 414px) {
+	.menu {
+		margin-bottom: 2em;
+    margin-top: -4em;
+	}
+	.col-xs-12 {
+		padding-left: 0 !important;
+		padding-right: 0 !important;
+	}
+	.page-container {
+		padding-bottom: 493px;
+	}
+	#footer-bottom {
+		height: 493px;
+	}
+	.get-started {
+		margin-bottom: 1em;
+	}
+	.contact-form .label {
+		font-size: 1em;
+	}
+	.experience,
+	.dresses {
+		h2 {
+			font-size: 1.15em !important;
+		}
+	}
+	.experience {
+		padding-bottom:  2em;
+	}
+}
+
+@media (max-width: 320px) {
+	.contact-form .label {
+		font-size: .75em;
+	}
+	.city-title {
+		letter-spacing: .1em;
+    font-size: 1em;
+	}
+	.page-container {
+		padding-bottom: 455px;
+	}
+	#footer-bottom {
+		height: 455px;
+	}
+	.btn {
+		font-size: .95em;
+	}
+	.experience h2, .dresses h2 {
+    font-size: 1em !important;
 	}
 }
