--- a/app/views/stores/new.html.erb
+++ b/app/views/stores/new.html.erb
@@ -1,5 +1,9 @@
-<h1>New Store</h1>
+<div class="container">
 
-<%= render 'form' %>
+	<h1>New Store</h1>
 
-<%= link_to 'Back', stores_path %>
+	<%= render 'form' %>
+
+	<%= link_to 'Back', stores_path %>
+	
+</div>
