--- a/app/views/nashville/_footer.html.erb
+++ b/app/views/nashville/_footer.html.erb
@@ -10,13 +10,13 @@
 		</div>
 	</div>
 	<div class="row bottom-nav">
-		<div class="col-xs-4">
+		<div class="col-xs-12 col-sm-4">
 			<li><%= link_to "The Experience", nashville_experience_path, :class => 'city-title' %></li>
 		</div>
-		<div class="col-xs-4">
+		<div class="col-xs-12 col-sm-4">
 	      <li><%= link_to "Explore Dresses", nashville_explore_path, :class => 'city-title' %></li>
 		</div>
-		<div class="col-xs-4">
+		<div class="col-xs-12 col-sm-4">
 	    <li><%= link_to "Contact", nashville_contact_path, :class => 'city-title' %></li>
 		</div>
 	</div>
