--- a/app/views/nashville/index.html.erb
+++ b/app/views/nashville/index.html.erb
@@ -4,10 +4,10 @@
 
 	<div class="row">
 		<div class="col-xs-12">
-			<div class="col-xs-6">
+			<div class="col-xs-12 col-md-6">
 				<%= image_tag("whitefish_placeholder.png", :alt => "Whitefish, MT", :class => "location-img") %>
 			</div>
-			<div class="col-xs-6 location-info">
+			<div class="col-xs-12 col-md-6 location-info">
 				<h3 class="city-title"><%= @store.name %></h3>
 				<p><%= @store.summary %></p>
 			</div>
@@ -28,7 +28,7 @@
 
 	<div class="row">
 		<div class="col-xs-12">
-			<div class="col-xs-6 experience">
+			<div class="col-xs-12 col-sm-6 experience">
 				<%= link_to(nashville_experience_path) do %>
 					<%= image_tag("whitefish_placeholder.png", :alt => "Whitefish, MT", :class => "location-img") %>
 				<% end %>
@@ -39,7 +39,7 @@
 					<% end %>
 				</div>
 			</div>
-			<div class="col-xs-6 dresses">
+			<div class="col-xs-12 col-sm-6 dresses">
 				<%= link_to(nashville_explore_path) do %>
 					<%= image_tag("whitefish_placeholder.png", :alt => "Whitefish, MT", :class => "location-img") %>
 				<% end %>
@@ -62,11 +62,11 @@
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-xs-4">
+				<div class="col-xs-12 col-sm-4">
 					<h4>Questions?</h4>
 					<a href="mailto:<%= @store.email %>" class="email">Email Us</a>
 				</div>
-				<div class="col-xs-4">
+				<div class="col-xs-12 col-sm-4">
 					<h4>Visit</h4>
 					<p><%= @store.address %></p>
 					<p><%= @store.name %></p>
@@ -75,7 +75,7 @@
 					<h4>Store Hours</h4>
 					<p class="hours"><%= @store.hours %></p>
 				</div>
-				<div class="col-xs-4">
+				<div class="col-xs-12 col-sm-4">
 					<h4>Connect</h4>
 				</div>
 			</div>
