--- a/app/views/stores/edit.html.erb
+++ b/app/views/stores/edit.html.erb
@@ -1,6 +1,10 @@
-<h1>Editing Store</h1>
+<div class="container">
 
-<%= render 'form' %>
+	<h1>Editing Store</h1>
 
-<%= link_to 'Show', @store %> |
-<%= link_to 'Back', stores_path %>
+	<%= render 'form' %>
+
+	<%= link_to 'Show', @store %> |
+	<%= link_to 'Back', stores_path %>
+
+</div>
