--- a/app/views/stores/index.html.erb
+++ b/app/views/stores/index.html.erb
@@ -1,37 +1,41 @@
-<p id="notice"><%= notice %></p>
+<div class="container">
 
-<h1>Listing Stores</h1>
+  <p id="notice"><%= notice %></p>
 
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Address</th>
-      <th>State</th>
-      <th>Url</th>
-      <th>Summary</th>
-      <th>Picture</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+  <h1>Listing Stores</h1>
 
-  <tbody>
-    <% @stores.each do |store| %>
+  <table>
+    <thead>
       <tr>
-        <td><%= store.name %></td>
-        <td><%= store.address %></td>
-        <td><%= store.state %></td>
-        <td><%= store.url %></td>
-        <td><%= store.summary %></td>
-        <td><%= store.picture %></td>
-        <td><%= link_to 'Show', store %></td>
-        <td><%= link_to 'Edit', edit_store_path(store) %></td>
-        <td><%= link_to 'Destroy', store, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <th>Name</th>
+        <th>Address</th>
+        <th>State</th>
+        <th>Url</th>
+        <th>Summary</th>
+        <th>Picture</th>
+        <th colspan="3"></th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
 
-<br>
+    <tbody>
+      <% @stores.each do |store| %>
+        <tr>
+          <td><%= store.name %></td>
+          <td><%= store.address %></td>
+          <td><%= store.state %></td>
+          <td><%= store.url %></td>
+          <td><%= store.summary %></td>
+          <td><%= store.picture %></td>
+          <td><%= link_to 'Show', store %></td>
+          <td><%= link_to 'Edit', edit_store_path(store) %></td>
+          <td><%= link_to 'Destroy', store, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
 
-<%= link_to 'New Store', new_store_path %>
+  <br>
+
+  <%= link_to 'New Store', new_store_path %>
+  
+</div>
