--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -26,6 +26,8 @@ $gold: #D1A66C;
 $blackish: #565656;
 $grey: #F7F7F7;
 $lightgrey: #949DA3;
+$h1-font-size: 1.15em;
+$h1-letter-sp: .2em;
 
 .wf-loading {        
   /* styles to use when web fonts are loading */  
@@ -71,12 +73,15 @@ $lightgrey: #949DA3;
     to   { opacity: 1; }
 }
 
+/** bootstrap overrides **/
 .col-xs-1, .col-sm-1, .col-md-1, .col-lg-1, .col-xs-2, .col-sm-2, .col-md-2, .col-lg-2, .col-xs-3, .col-sm-3, .col-md-3, .col-lg-3, .col-xs-4, .col-sm-4, .col-md-4, .col-lg-4, .col-xs-5, .col-sm-5, .col-md-5, .col-lg-5, .col-xs-6, .col-sm-6, .col-md-6, .col-lg-6, .col-xs-7, .col-sm-7, .col-md-7, .col-lg-7, .col-xs-8, .col-sm-8, .col-md-8, .col-lg-8, .col-xs-9, .col-sm-9, .col-md-9, .col-lg-9, .col-xs-10, .col-sm-10, .col-md-10, .col-lg-10, .col-xs-11, .col-sm-11, .col-md-11, .col-lg-11, .col-xs-12, .col-sm-12, .col-md-12, .col-lg-12 {
 	padding-left: 30px !important;
 	padding-right: 30px !important;
 }
 
-
+.form-control {
+	border-radius: 0 !important;
+}
 
 .container {
 	width: 99% !important;
@@ -85,7 +90,7 @@ $lightgrey: #949DA3;
 .page-container {
 	position: relative;
 	min-height: 100%;
-	padding-bottom: 352px;
+	padding-bottom: 400px;
 }
 
 html, 
@@ -123,9 +128,9 @@ a:hover {
 .btn {
 	text-transform: uppercase;
 	font-family: $h1-font;
-	letter-spacing: .2em;
-	font-size: 1.15em;
-	border: 1px solid $gold;
+	letter-spacing: $h1-letter-sp;
+	font-size: $h1-font-size;
+	border: 2px solid $gold;
 	padding: 1.5em 1.75em;
 	background-color: #fff;
 
@@ -139,7 +144,7 @@ a:hover {
 
 .btn:hover {
   background-color: $gold;
-  color: white;
+  color: $grey;
 }
 
 .header {
@@ -160,8 +165,8 @@ a:hover {
 	line-height: 1.5em;
 
 	font-family: $h1-font;
-	letter-spacing: .2em;
-	font-size: 1.25em;
+	letter-spacing: $h1-letter-sp;
+	font-size: $h1-font-size;
 	color: $blackish !important;
 }
 
@@ -209,7 +214,7 @@ a.city-title:hover {
 		font-family: $body-font;
 		line-height: 2em;
 		padding: 0 1em;
-		font-size: 1.15em;
+		font-size: $h1-font-size;
 	}
 	
 }
@@ -221,9 +226,10 @@ a.city-title:hover {
 	text-transform: uppercase;
 
 	h3 {
-		font-size: 1.15em;
+		font-size: $h1-font-size;
 		line-height: 1.75em;
-		letter-spacing: .2em;
+		letter-spacing: $h1-letter-sp;
+		margin-top: 10px;
 	}
 
 	.btn {
@@ -249,24 +255,21 @@ a.city-title:hover {
 		margin: 0 auto 0 0;
 
 		font-family: $h1-font;
-		letter-spacing: .2em;
-		font-size: 1.25em;
+		letter-spacing: $h1-letter-sp;
+		font-size: $h1-font-size;
 		line-height: 1.45em;
 		text-transform: uppercase;
 		display: inline-block;
 		align-self: flex-start;
-
-		a {
-			color: $blackish;
-		}
-
-		a:hover {
-			color: $gold;
-			text-decoration: none;
-		}
+		color: $blackish;
 	}
 
-	a.arrow-a {
+	h2:hover {
+		color: $gold;
+		text-decoration: none;
+	}
+
+	span.arrow-a {
     height: 100%;
     min-height: 70px;
     min-width: 70px;
@@ -325,7 +328,7 @@ a.city-title:hover {
 		text-transform: uppercase;
 		letter-spacing: .1em;
 		font-family: $h1-font;
-		font-size: 1.15em;
+		font-size: $h1-font-size;
 	}
 
 	p {
@@ -354,7 +357,7 @@ a.city-title:hover {
 	position: absolute;
 	bottom: 0;
 	width:100%;
-  height:352px;
+  height:auto;
   overflow: hidden;
 }
 
@@ -406,13 +409,18 @@ a.city-title:hover {
     text-align: center;
     margin: .5em 0;
     font-family: "brandon-grotesque", sans-serif;
-    letter-spacing: .2em;
-    font-size: 1.25em;
+    letter-spacing: $h1-letter-sp;
+    font-size: $h1-font-size;
     color: #565656 !important;
 	}
 
-	.submit {
-		margin-right: 1em;
+	.submit-holder {
+		padding-left: 23px !important;
+		padding-right: 15px !important;
+
+		.submit {
+			width: 100%;
+		}
 	}
 }
 
@@ -440,12 +448,6 @@ a.city-title:hover {
 		padding-left: 0 !important;
 		padding-right: 0 !important;
 	}
-	.page-container {
-		padding-bottom: 493px;
-	}
-	#footer-bottom {
-		height: 493px;
-	}
 	.get-started {
 		margin-bottom: 1em;
 	}
@@ -455,11 +457,14 @@ a.city-title:hover {
 	.experience,
 	.dresses {
 		h2 {
-			font-size: 1.15em !important;
+			font-size: $h1-font-size !important;
 		}
 	}
 	.experience {
 		padding-bottom:  2em;
+	}
+	.page-container {
+		padding-bottom: 500px;
 	}
 }
 
@@ -470,12 +475,6 @@ a.city-title:hover {
 	.city-title {
 		letter-spacing: .1em;
     font-size: 1em;
-	}
-	.page-container {
-		padding-bottom: 455px;
-	}
-	#footer-bottom {
-		height: 455px;
 	}
 	.btn {
 		font-size: .95em;
