--- a/app/views/nashville/index.html.erb
+++ b/app/views/nashville/index.html.erb
@@ -28,29 +28,29 @@
 
 	<div class="row">
 		<div class="col-xs-12">
-			<div class="col-xs-12 col-sm-6 experience">
-				<%= link_to(nashville_experience_path) do %>
+			<%= link_to(nashville_experience_path) do %>
+				<div class="col-xs-12 col-sm-6 experience">
 					<%= image_tag("whitefish_placeholder.png", :alt => "Whitefish, MT", :class => "location-img") %>
-				<% end %>
-				<div class="label-holder">
-					<h2><%= link_to "The Experience", nashville_experience_path %>&nbsp;&nbsp;</h2>
-					<%= link_to(nashville_experience_path, :class => 'arrow-a') do %>
-					  <span class="arrow-circle"><span class="glyphicon glyphicon-menu-right arrow"></span></span>
-					<% end %>
+					<div class="label-holder">
+						<h2>The Experience</h2>
+						<span class="arrow-a">
+						  <span class="arrow-circle"><span class="glyphicon glyphicon-menu-right arrow"></span></span>
+						</span>
+					</div>
 				</div>
-			</div>
-			<div class="col-xs-12 col-sm-6 dresses">
-				<%= link_to(nashville_explore_path) do %>
-					<%= image_tag("whitefish_placeholder.png", :alt => "Whitefish, MT", :class => "location-img") %>
-				<% end %>
+			<% end %>
 
-				<div class="label-holder">
-					<h2><%= link_to "Explore Dresses", nashville_explore_path %></h2>
-					<%= link_to(nashville_explore_path, :class => 'arrow-a') do %>
-					  <span class="arrow-circle"><span class="glyphicon glyphicon-menu-right arrow"></span></span>
-					<% end %>
+			<%= link_to(nashville_explore_path) do %>
+				<div class="col-xs-12 col-sm-6 dresses">
+					<%= image_tag("whitefish_placeholder.png", :alt => "Whitefish, MT", :class => "location-img") %>
+					<div class="label-holder">
+						<h2>Explore Dresses</h2>
+						<span class="arrow-a">
+						  <span class="arrow-circle"><span class="glyphicon glyphicon-menu-right arrow"></span></span>
+						</span>
+					</div>
 				</div>
-			</div>
+			<% end %>
 		</div>
 	</div>
 
