--- a/app/views/tupelo/index.html.erb
+++ b/app/views/tupelo/index.html.erb
@@ -20,7 +20,7 @@
 				<div class="col-xs-12 appointment-info">
 					<h3>All dresses are shown by appointment</h3>
 					<h3>Book today so we can introduce ourselves</h3>
-					<a href="https://www.schedulicity.com/scheduling/WBV7B4" class="btn">Book an appointment</a>
+					<a href="<%= @store.url %>" target="_blank"  class="btn">Book an appointment</a>
 				</div>
 			</div>
 		</div>
