footer cols wider

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -355,6 +355,11 @@ a.city-title:hover {
     text-align: center;
     font-size: .95em;
 	}
+
+	.col-sm-4 {
+		padding-left: 0px !important;
+		padding-right: 0px !important;
+	}
 }
 
 #footer-bottom {
