--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -136,7 +136,7 @@ p {
 	font-size: $h1-font-size;
 	border: 2px solid $gold;
 	padding: 1.5em 1.75em;
-	background-color: #fff;
+	background-color: transparent;
 
 	-webkit-border-radius: 0 !important;
   -moz-border-radius: 0 !important;
@@ -153,7 +153,7 @@ p {
 
 .header {
 	text-align: center;
-	margin: 3em auto;
+	margin: 2em auto;
 	position: relative;
 
 	.logo {
@@ -228,11 +228,12 @@ a.city-title:hover {
 	text-align: center;
 	background-color: $grey;
 	text-transform: uppercase;
+	font-size: 1em;
 
 	h3 {
 		font-size: $h1-font-size;
 		line-height: 1.75em;
-		letter-spacing: $h1-letter-sp;
+		letter-spacing: .1em;
 		margin-top: 10px;
 	}
 
@@ -275,10 +276,10 @@ a.city-title:hover {
 
 	span.arrow-a {
     height: 100%;
-    min-height: 70px;
-    min-width: 70px;
+    min-height: 60px;
+    min-width: 60px;
 		overflow: hidden;
-		padding-top: 1em;
+		padding-top: 1.25em;
 		margin-right: 2em;
 		
 		align-self: center;
@@ -292,10 +293,10 @@ a.city-title:hover {
 	    padding: 13px 12px 8px 12px;
 
 	    background: $grey;
-	    border: 3px solid $gold;
+	    border: 2px solid $gold;
 	    text-align: center;
 
-	    font: 32px Arial, sans-serif;
+	    font: 22px Arial, sans-serif;
 	}
 
 	.arrow {
@@ -394,6 +395,7 @@ a.city-title:hover {
 	background-color: $grey;
 	margin: 0 !important;
 	padding: 4em;
+	font-size: .85em;
 
 	li {
 		list-style-type: none;
@@ -451,7 +453,7 @@ a.city-title:hover {
 @media (max-width: 414px) {
 	.menu {
 		margin-bottom: 2em;
-    margin-top: -4em;
+    margin-top: -3em;
 	}
 	.col-xs-12 {
 		padding-left: 0 !important;
