--- a/app/views/whitefish/index.html.erb
+++ b/app/views/whitefish/index.html.erb
@@ -5,7 +5,7 @@
 	<div class="row">
 		<div class="col-xs-12">
 			<div class="col-xs-12 col-md-6">
-				<%= image_tag("whitefish_placeholder.png", :alt => "Whitefish, MT", :class => "location-img") %>
+				<%= image_tag("whitefish_shop.png", :alt => "Whitefish, MT", :class => "location-img") %>
 			</div>
 			<div class="col-xs-12 col-md-6 location-info">
 				<h3 class="city-title"><%= @store.name %></h3>
