--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -37,10 +37,6 @@ $h1-letter-sp: .2em;
 .wf-active {        
   /* styles to use when web fonts are active */  
   -webkit-animation: fadein 1s; /* Safari, Chrome and Opera > 12.1 */
-       -moz-animation: fadein 1s; /* Firefox < 16 */
-        -ms-animation: fadein 1s; /* Internet Explorer */
-         -o-animation: fadein 1s; /* Opera < 12.1 */
-            animation: fadein 1s;
 }   
 
 
@@ -49,28 +45,13 @@ $h1-letter-sp: .2em;
     to   { opacity: 1; }
 }
 
-/* Firefox < 16 */
-@-moz-keyframes fadein {
-    from { opacity: 0; }
-    to   { opacity: 1; }
-}
-
-/* Safari, Chrome and Opera > 12.1 */
-@-webkit-keyframes fadein {
-    from { opacity: 0; }
-    to   { opacity: 1; }
-}
-
-/* Internet Explorer */
-@-ms-keyframes fadein {
-    from { opacity: 0; }
-    to   { opacity: 1; }
-}
-
-/* Opera < 12.1 */
-@-o-keyframes fadein {
-    from { opacity: 0; }
-    to   { opacity: 1; }
+@keyframes pulse {
+  0% {
+    transform: scale(1.05);
+  }
+  100% {
+    transform: scale(1);
+  }
 }
 
 /** bootstrap overrides **/
@@ -110,6 +91,7 @@ body {
 img {
 	width: 100%;
 	height: auto;
+	animation: fadein 1s;
 }
 
 a, a:hover, a:visited {
@@ -153,12 +135,25 @@ p {
 
 .header {
 	text-align: center;
-	margin: 2em auto;
+	margin: 0em auto;
 	position: relative;
 
 	.logo {
 		max-width: 363px;
+		animation: pulse 1s;
 	}
+}
+
+.first {
+	animation: fadein 1s;
+}
+
+.second {
+	animation: fadein 3s;
+}
+
+.third {
+	animation: fadein 5s;
 }
 
 .city-title {
@@ -492,5 +487,12 @@ a.city-title:hover {
 	}
 	.experience h2, .dresses h2 {
     font-size: 1em !important;
+	}
+}
+
+@media (max-height: 850px) {
+	.home-img-container {
+		max-height: 60vh;
+		overflow: hidden;
 	}
 }
