--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -36,7 +36,7 @@ $h1-letter-sp: .2em;
 
 .wf-active {        
   /* styles to use when web fonts are active */  
-  -webkit-animation: fadein 1s; /* Safari, Chrome and Opera > 12.1 */
+  animation: fadein 1s; /* Safari, Chrome and Opera > 12.1 */
 }   
 
 
@@ -205,6 +205,7 @@ a.city-title:hover {
 
 
 .location-info {
+	animation: fadein 1s;
 	text-align: center;
 	h3 {
 		margin-bottom: 1.5em;
