--- a/app/views/stores/_form.html.erb
+++ b/app/views/stores/_form.html.erb
@@ -17,7 +17,7 @@
   </div>
   <div class="field">
     <%= f.label :address %><br>
-    <%= f.text_field :address %>
+    <%= f.text_area :address, :class => 'wysihtml5' %>
   </div>
   <div class="field">
     <%= f.label :state %><br>
@@ -37,11 +37,11 @@
   </div>
   <div class="field">
     <%= f.label :hours %><br>
-    <%= f.text_field :hours %>
+    <%= f.text_area :hours, :class => 'wysihtml5' %>
   </div>
   <div class="field">
     <%= f.label :summary %><br>
-    <%= f.text_area :summary %>
+    <%= f.text_area :summary, :class => 'wysihtml5' %>
   </div>
   <div class="field">
     <%= f.label :picture %><br>
