add instagram and link

--- a/app/views/tupelo/index.html.erb
+++ b/app/views/tupelo/index.html.erb
@@ -77,6 +77,8 @@
 				</div>
 				<div class="col-xs-12 col-sm-4">
 					<h4>Connect</h4>
+					<a href="https://www.instagram.com/willowbridems/" target="_blank"><i class="fa fa-instagram"></i></a>
+					
 				</div>
 			</div>
 		</div>
