adjust form mobile

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -460,7 +460,7 @@ a.city-title:hover {
 		margin-bottom: 1em;
 	}
 	.contact-form .label {
-		font-size: 1em;
+		font-size: .85em;
 	}
 	.experience,
 	.dresses {
