--- a/app/views/nashville/explore.html.erb
+++ b/app/views/nashville/explore.html.erb
@@ -1,12 +1,23 @@
 <div class="container">
-
+	
 	<%= render partial: "nav" %>
 
-	<div class="row">
-		<div class="col-xs-12">
-			<h1 class="city-title">COMING SOON...</h1>
+	<div class="row no-bottom">
+		<div class="col-xs-12 designers">
+			<a href="http://www.daalarna.hu/" target="_blank" class="designer">Daalarna</a> 
+			<span class="designer">Something Blue</span> 
+			<a href="http://www.jesuspeiro.com/en/" target="_blank" class="designer">Jesus Piero</a> 
+			<a href="http://www.arieltaub.com" target="_blank" class="designer">Ariel Jennifer Taub</a> 
+			<a href="http://www.madeleinefig.com" target="_blank" class="designer">Madeline Fig</a> 
+
+
+			<p class="coming-soon">Full gallery coming soon!</p>
+
+
 		</div>
 	</div>
 </div>
+
+<%= render partial: "nashville_footer" %>
 
 <%= render partial: "footer" %>
