--- a/app/views/tupelo/explore.html.erb
+++ b/app/views/tupelo/explore.html.erb
@@ -1,12 +1,26 @@
 <div class="container">
-
+	
 	<%= render partial: "nav" %>
 
-	<div class="row">
-		<div class="col-xs-12">
-			<h1 class="city-title">COMING SOON...</h1>
+	<div class="row no-bottom">
+		<div class="col-xs-12 designers">
+			<a href="http://www.daalarna.hu/" target="_blank" class="designer">Daalarna</a> 
+			<a href="http://www.jlmcouture.com" target="_blank" class="designer">Hayley Paige</a> 
+			<a href="http://www.jlmcouture.com" target="_blank" class="designer">Blush by Hayley Paige</a> 
+			<a href="http://www.jlmcouture.com" target="_blank" class="designer">Alvina Valenta</a> 
+			<a href="http://www.theiacouture.com" target="_blank" class="designer">Theia</a> 
+			<a href="http://www.sarahseven.com" target="_blank" class="designer">Sarah Seven</a> 
+			<a href="http://www.sarahseven.com" target="_blank" class="designer">Sarah Seven Bride</a> 
+			<a href="http://www.sarehnouri.com" target="_blank" class="designer">Sareh Nouri</a> 
+			<a href="http://www.jennyyoo.com " target="_blank" class="designer">Jenny Yoo</a> 
+
+			<p class="coming-soon">Full gallery coming soon!</p>
+
+
 		</div>
 	</div>
 </div>
+
+<%= render partial: "tupelo_footer" %>
 
 <%= render partial: "footer" %>
