--- a/app/views/tupelo/experience.html.erb
+++ b/app/views/tupelo/experience.html.erb
@@ -3,10 +3,38 @@
 	<%= render partial: "nav" %>
 			
 	<div class="row">
-		<div class="col-xs-12">
-			<h1 class="city-title">COMING SOON...</h1>
+		<div class="col-xs-12 experience">
+
+			<div class="col-xs-12 col-md-6">
+
+				<h1 class="left-title">The Experience</h1>
+					
+				<p>Southern charm with urban flair is what you, friends and family will experience when you book an appointment with Willow Bride.  In our 90 minute appointment we want to create a comfortable atmosphere for guests to mingle and enjoy the experience with you over champagne and goodies. Because we are a small boutique, your appointment will be unique and intimate, giving you the undivided to help make your perfect wedding dress visions com to life.</p>
+
+			</div>
+
+			<div class="col-xs-12 col-md-6">
+				<%= image_tag("tupelo_experience.png", :alt => "Tupelo, MS", :class => "experience-img") %>
+			</div>
+
 		</div>
 	</div>
+
+
+	<div class="col-xs-12">
+		<div class="col-xs-12">
+			<div class="col-xs-12 appointment-info">
+				<h3>All dresses are shown by appointment</h3>
+				<h3>Book today so we can introduce ourselves</h3>
+				<a href="<%= @store.url %>" target="_blank" class="btn">Book an appointment</a>
+			</div>
+		</div>
+	</div>
+	
 </div>
 
+<%= render partial: "tupelo_footer" %>
+
 <%= render partial: "footer" %>
+
+
