--- a/app/views/whitefish/explore.html.erb
+++ b/app/views/whitefish/explore.html.erb
@@ -2,11 +2,25 @@
 	
 	<%= render partial: "nav" %>
 
-	<div class="row">
-		<div class="col-xs-12">
-			<h1 class="city-title">COMING SOON...</h1>
+	<div class="row no-bottom">
+		<div class="col-xs-12 designers">
+			<a href="http://www.jennyyoo.com" target="_blank" class="designer">Jenny Yoo</a> 
+			<a href="http://www.jennyyoo.com" target="_blank" class="designer">Jenny Yoo Bridesmaids</a> 
+			<a href="http://www.clairelafaye.com" target="_blank" class="designer">Claire La Faye</a> 
+			<a href="http://clairepettibone.com" target="_blank" class="designer">Claire Pettibone Couture</a> 
+			<a href="http://romantique.clairepettibone.com" target="_blank" class="designer">Claire Pettibone Romantique</a> 
+			<a href="http://www.essensedesigns.com/stella-york/" target="_blank" class="designer">Stella York</a> 
+			<a href="http://www.jlmcouture.com/Alvina-Valenta/Bridal" target="_blank" class="designer">Alvina Valenta</a> 
+			<a href="http://www.jlmcouture.com/Blush-Hayley-Paige/Bridal" target="_blank" class="designer">Blush by Hayley Paige</a> 
+			<a href="http://theiacouture.com/collections/bridal/lookbook" target="_blank" class="designer">Theia</a> 
+			<a href="http://www.sarahseven.com" target="_blank" class="designer">Sarah Seven</a> 
+
+			<p class="coming-soon">Full gallery coming soon!</p>
+
 		</div>
 	</div>
 </div>
+
+<%= render partial: "whitefish_footer" %>
 
 <%= render partial: "footer" %>
