remove padding for mobile

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -499,6 +499,10 @@ a.city-title:hover {
 			font-size: .95em !important;
 		}
 	}
+
+	.experience p {
+		padding-right: 0em !important;
+	}
 }
 
 @media (max-width: 414px) {
