adding the experience

--- a/app/views/stores/_form.html.erb
+++ b/app/views/stores/_form.html.erb
@@ -44,6 +44,10 @@
     <%= f.text_area :summary, :class => 'wysihtml5' %>
   </div>
   <div class="field">
+    <%= f.label :theexperience %><br>
+    <%= f.text_area :theexperience, :class => 'wysihtml5' %>
+  </div>
+  <div class="field">
     <%= f.label :picture %><br>
     <%= f.text_field :picture %>
   </div>
