--- a/app/views/whitefish/experience.html.erb
+++ b/app/views/whitefish/experience.html.erb
@@ -9,13 +9,7 @@
 
 				<h1 class="left-title">The Experience</h1>
 					
-				<p>Found in the mountains of Whitefish, Montana is an intimate Northwest bridal boutique that focuses on providing you the most lovely experience to find your perfect wedding dress.  Willow Bride offers exclusive wedding gown designers that cannot be found anywhere else in the area. It is our desire at Willow Bride to create an experience for each bride while she invisions herself walking down the aisle on her big day, and to help find the gown that fulfills her wildest dreams. </p> 
-
-				<p>From the moment each bride enters Willow Bride, she will be greeted as a long lost friend and given one-on-one attention with an experienced bridal consultant. Each bride's consultant will assist her in choosing which dresses fit her personal style and wedding day vision. We will help guide you towards the dress of your dreams while helping you stay within your chosen budget.</p>
-
-				<p>At Willow Bride we understand that shopping for your perfect gown is a memory you will only make once and our goal is to insure that each bride that enters our doors leaves with more than just the dress they will wear on their beautiful day, they will also leave with a full heart and memories to last a lifetime.</p>
-
-				<p>We look forward to meeting you and if you have any further questions please do not hesitate to <a href="/whitefish/contact">contact us</a>! </p>
+				<%= @store.theexperience.htm_safe %>
 
 			</div>
 
