adding experience field to form

--- a/app/views/stores/show.html.erb
+++ b/app/views/stores/show.html.erb
@@ -43,6 +43,11 @@
   </p>
 
   <p>
+    <strong>The Experience:</strong>
+    <%= @store.theexperience %>
+  </p>
+
+  <p>
     <strong>Picture:</strong>
     <%= @store.picture %>
   </p>
