--- a/app/views/stores/_form.html.erb
+++ b/app/views/stores/_form.html.erb
@@ -45,7 +45,7 @@
   </div>
   <div class="field">
     <%= f.label :theexperience %><br>
-    <%= f.text_area :theexperience, :class => 'wysihtml5' %>
+    <%= f.text_field :theexperience %>
   </div>
   <div class="field">
     <%= f.label :picture %><br>
