--- a/app/views/whitefish/_nav.html.erb
+++ b/app/views/whitefish/_nav.html.erb
@@ -5,8 +5,8 @@
 
 			<nav id="whitefish-menu">
 			   <ul>
-			   	  <li><%= link_to "Willow Bride", root_path, :class => 'city-title' %></li>
-			      <li><%= link_to "Location", whitefish_path, :class => 'city-title' %></li>
+			   	  <li><%= link_to "Locations", root_path, :class => 'city-title' %></li>
+			      <li><%= link_to "About", whitefish_path, :class => 'city-title' %></li>
 			      <li><%= link_to "The Experience", whitefish_experience_path, :class => 'city-title' %></li>
 			      <li><%= link_to "Explore Dresses", whitefish_explore_path, :class => 'city-title' %></li>
 			      <li><%= link_to "Contact", whitefish_contact_path, :class => 'city-title' %></li>
