--- a/app/views/nashville/_nav.html.erb
+++ b/app/views/nashville/_nav.html.erb
@@ -5,8 +5,8 @@
 
 			<nav id="nashville-menu">
 			   <ul>
-			   	  <li><%= link_to "Willow Bride", root_path, :class => 'city-title' %></li>
-			      <li><%= link_to "Location", nashville_path, :class => 'city-title' %></li>
+			   	  <li><%= link_to "Locations", root_path, :class => 'city-title' %></li>
+			      <li><%= link_to "About", nashville_path, :class => 'city-title' %></li>
 			      <li><%= link_to "The Experience", nashville_experience_path, :class => 'city-title' %></li>
 			      <li><%= link_to "Explore Dresses", nashville_explore_path, :class => 'city-title' %></li>
 			      <li><%= link_to "Contact", nashville_contact_path, :class => 'city-title' %></li>
