--- a/app/views/tupelo/_nav.html.erb
+++ b/app/views/tupelo/_nav.html.erb
@@ -5,8 +5,8 @@
 
 			<nav id="tupelo-menu">
 			   <ul>
-			   	  <li><%= link_to "Willow Bride", root_path, :class => 'city-title' %></li>
-			      <li><%= link_to "Location", tupelo_path, :class => 'city-title' %></li>
+			   	  <li><%= link_to "Locations", root_path, :class => 'city-title' %></li>
+			      <li><%= link_to "About", tupelo_path, :class => 'city-title' %></li>
 			      <li><%= link_to "The Experience", tupelo_experience_path, :class => 'city-title' %></li>
 			      <li><%= link_to "Explore Dresses", tupelo_explore_path, :class => 'city-title' %></li>
 			      <li><%= link_to "Contact", tupelo_contact_path, :class => 'city-title' %></li>
