add the experience

--- a/app/views/tupelo/experience.html.erb
+++ b/app/views/tupelo/experience.html.erb
@@ -9,7 +9,8 @@
 
 				<h1 class="left-title">The Experience</h1>
 					
-				<p>Southern charm with urban flair is what you, friends and family will experience when you book an appointment with Willow Bride. In our 90 minute appointment we want to create a comfortable atmosphere for guests to mingle and enjoy the experience with you over champagne and goodies. Because we are a small boutique, your appointment will be unique and intimate, giving you the undivided to help make your perfect wedding dress visions com to life.</p>
+				<p><%= @store.theexperience.html_safe %></p>
+
 
 			</div>
 
