--- a/app/views/nashville/experience.html.erb
+++ b/app/views/nashville/experience.html.erb
@@ -1,26 +1,40 @@
 <div class="container">
 
 	<%= render partial: "nav" %>
-
+			
 	<div class="row">
-		<div class="col-xs-12">
-			<h1 class="city-title">COMING SOON...</h1>
-			<p>&nbsp;</p>
-			<p>&nbsp;</p>
-			<p>&nbsp;</p>
-			<p>&nbsp;</p>
-			<p>&nbsp;</p>
-			<p>&nbsp;</p>
-			<p>&nbsp;</p>
-			<p>&nbsp;</p>
-			<p>&nbsp;</p>
-			<p>&nbsp;</p>
-			<p>&nbsp;</p>
-			<p>&nbsp;</p>
-			<p>&nbsp;</p>
-			<p>&nbsp;</p>
+		<div class="col-xs-12 experience">
+
+			<div class="col-xs-12 col-md-6">
+
+				<h1 class="left-title">The Experience</h1>
+					
+				<p><%= @store.theexperience.html_safe %></p>
+
+			</div>
+
+			<div class="col-xs-12 col-md-6">
+				<%= image_tag("nashville_experience.png", :alt => "Nashville, TN", :class => "experience-img") %>
+			</div>
+
 		</div>
 	</div>
+
+
+	<div class="col-xs-12">
+		<div class="col-xs-12">
+			<div class="col-xs-12 appointment-info">
+				<h3>All dresses are shown by appointment</h3>
+				<h3>Book today so we can introduce ourselves</h3>
+				<a href="<%= @store.url %>" target="_blank" class="btn">Book an appointment</a>
+			</div>
+		</div>
+	</div>
+
 </div>
 
+<%= render partial: "nashville_footer" %>
+
 <%= render partial: "footer" %>
+
+
