--- a/app/views/stores/index.html.erb
+++ b/app/views/stores/index.html.erb
@@ -4,15 +4,10 @@
 
   <h1>Listing Stores</h1>
 
-  <table>
+  <table class="table">
     <thead>
       <tr>
         <th>Name</th>
-        <th>Address</th>
-        <th>State</th>
-        <th>Url</th>
-        <th>Summary</th>
-        <th>Picture</th>
         <th colspan="3"></th>
       </tr>
     </thead>
@@ -21,11 +16,6 @@
       <% @stores.each do |store| %>
         <tr>
           <td><%= store.name %></td>
-          <td><%= store.address %></td>
-          <td><%= store.state %></td>
-          <td><%= store.url %></td>
-          <td><%= store.summary %></td>
-          <td><%= store.picture %></td>
           <td><%= link_to 'Show', store %></td>
           <td><%= link_to 'Edit', edit_store_path(store) %></td>
           <td><%= link_to 'Destroy', store, method: :delete, data: { confirm: 'Are you sure?' } %></td>
